--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,11 @@
 @import "tailwindcss";
 
 html, body, #root {
-  height: 100%;
+  min-height: 100%;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: rgb(244, 250, 255);
 }
+
 
